calculator_project/calculator_app/static/css/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-image: url('../images/blueRidgeMountains.jpg');
    color: white;
}

form {
    max-width: 400px;
    margin: 50px auto;
    background: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    overflow: hidden; /* To contain floated label-input pairs */
}

label {
    font-weight: bold;
    display: block;
    margin-bottom: 8px;
}

input[type="text"],
input[type="number"],
input[type="password"],
input[type="email"]{
    width: calc(100% - 22px);
    padding: 10px;
    margin-bottom: 16px;
    border: 1px solid #ccc;
    border-radius: 4px;
    transition: border-color 0.3s ease;
}

input[type="text"]:hover,
input[type="number"]:hover,
input[type="password"]:hover,
input[type="email"]:hover{
    border-color: #999; /* Changing border color on hover */
}

input[type="reset"],
input[type="submit"] {
    width: 100%;
    background-color: #4CAF50;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

input[type="reset"]:hover,
input[type="submit"]:hover {
    background-color: #45a049;
}

input[type="reset"]:focus,
input[type="submit"]:focus {
    outline: none;
}

input[type="reset"] {
    background-color: #f44336;
}

input[type="reset"]:hover {
    background-color: #da190b;
}

input[type="reset"]:focus {
    outline: none;
}

#header {
    text-align: center;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#results {
    text-align: center;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    font-weight: bold;
}

